[gd_scene load_steps=54 format=3 uid="uid://8lekrqo3cykw"]

[ext_resource type="Script" path="res://game/hero/Hero.gd" id="1_83vm3"]
[ext_resource type="Material" uid="uid://b1rr1d7kl8ium" path="res://shader/SmoothPixel.tres" id="1_e1xul"]
[ext_resource type="Texture2D" uid="uid://die8toapequn2" path="res://game/hero/undead_shadow.png" id="2_b1ar1"]
[ext_resource type="Texture2D" uid="uid://br4j3d8xbd47t" path="res://game/hero/Tiny Alchemist Sprite Sheet 48x32.png" id="4_o77ur"]
[ext_resource type="Texture2D" uid="uid://soggsxqxkpyq" path="res://game/bullets/assets/lights1.png" id="6_gdjfy"]
[ext_resource type="Texture2D" uid="uid://6dfnhmchpyb2" path="res://game/hero/Light (1).png" id="6_ky4xl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_812dt"]
atlas = ExtResource("4_o77ur")
region = Rect2(0, 192, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_liewo"]
atlas = ExtResource("4_o77ur")
region = Rect2(48, 192, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0th3"]
atlas = ExtResource("4_o77ur")
region = Rect2(96, 192, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wvoo"]
atlas = ExtResource("4_o77ur")
region = Rect2(144, 192, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2h5i"]
atlas = ExtResource("4_o77ur")
region = Rect2(192, 192, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg6vb"]
atlas = ExtResource("4_o77ur")
region = Rect2(0, 512, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaqas"]
atlas = ExtResource("4_o77ur")
region = Rect2(48, 512, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdcuf"]
atlas = ExtResource("4_o77ur")
region = Rect2(96, 512, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8pja"]
atlas = ExtResource("4_o77ur")
region = Rect2(144, 512, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p75ec"]
atlas = ExtResource("4_o77ur")
region = Rect2(192, 512, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8awp"]
atlas = ExtResource("4_o77ur")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_stji5"]
atlas = ExtResource("4_o77ur")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0aybg"]
atlas = ExtResource("4_o77ur")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgra5"]
atlas = ExtResource("4_o77ur")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2il5i"]
atlas = ExtResource("4_o77ur")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_elkdy"]
atlas = ExtResource("4_o77ur")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rogja"]
atlas = ExtResource("4_o77ur")
region = Rect2(0, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_30k8v"]
atlas = ExtResource("4_o77ur")
region = Rect2(48, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkfyj"]
atlas = ExtResource("4_o77ur")
region = Rect2(96, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo31a"]
atlas = ExtResource("4_o77ur")
region = Rect2(144, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm0ck"]
atlas = ExtResource("4_o77ur")
region = Rect2(192, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft7oe"]
atlas = ExtResource("4_o77ur")
region = Rect2(240, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o20n1"]
atlas = ExtResource("4_o77ur")
region = Rect2(288, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yj18"]
atlas = ExtResource("4_o77ur")
region = Rect2(336, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mc1j"]
atlas = ExtResource("4_o77ur")
region = Rect2(0, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vanax"]
atlas = ExtResource("4_o77ur")
region = Rect2(48, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htrx1"]
atlas = ExtResource("4_o77ur")
region = Rect2(96, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fn35"]
atlas = ExtResource("4_o77ur")
region = Rect2(144, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cswdp"]
atlas = ExtResource("4_o77ur")
region = Rect2(192, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuew6"]
atlas = ExtResource("4_o77ur")
region = Rect2(240, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkkwk"]
atlas = ExtResource("4_o77ur")
region = Rect2(288, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqll"]
atlas = ExtResource("4_o77ur")
region = Rect2(336, 160, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a2m0y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_812dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liewo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0th3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wvoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2h5i")
}],
"loop": false,
"name": &"dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg6vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaqas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdcuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8pja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p75ec")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8awp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stji5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0aybg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgra5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2il5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elkdy")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rogja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30k8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkfyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo31a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm0ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft7oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o20n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yj18")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mc1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vanax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htrx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fn35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cswdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuew6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqll")
}],
"loop": true,
"name": &"run_back",
"speed": 12.0
}]

[sub_resource type="Curve" id="Curve_rny4l"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, -360), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_pje6m"]
curve = SubResource("Curve_rny4l")

[sub_resource type="Gradient" id="Gradient_uuovj"]
colors = PackedColorArray(0.578442, 0.870588, 0.749955, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ub1nm"]
gradient = SubResource("Gradient_uuovj")

[sub_resource type="Curve" id="Curve_u77m8"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2ultx"]
curve = SubResource("Curve_u77m8")

[sub_resource type="Curve" id="Curve_lbkqq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0090909), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_bdoqj"]
curve = SubResource("Curve_lbkqq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hmw5a"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 28.13
angle_min = 15.0
angle_max = 100.0
angle_curve = SubResource("CurveTexture_pje6m")
direction = Vector3(-1, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.05
orbit_velocity_max = 0.1
gravity = Vector3(0, 0, 0)
linear_accel_max = 19.7
linear_accel_curve = SubResource("CurveTexture_2ultx")
scale_min = 0.0
scale_curve = SubResource("CurveTexture_bdoqj")
color_ramp = SubResource("GradientTexture1D_ub1nm")

[sub_resource type="CircleShape2D" id="CircleShape2D_5kl1j"]
radius = 7.0

[sub_resource type="Curve" id="Curve_nb30i"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.436364), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5ggjt"]
curve = SubResource("Curve_nb30i")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d7ox4"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(0, -1, 0)
initial_velocity_max = 25.0
gravity = Vector3(0, 0, 0)
tangential_accel_max = 15.0
scale_min = 2.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_5ggjt")
color = Color(0.956863, 0.956863, 0.956863, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_e3q2s"]
radius = 16.0

[node name="Hero" type="CharacterBody2D" groups=["hero"]]
material = ExtResource("1_e1xul")
collision_layer = 25
motion_mode = 1
script = ExtResource("1_83vm3")

[node name="RewardRoot" type="Node2D" parent="."]

[node name="UndeadShadow" type="Sprite2D" parent="."]
position = Vector2(0, -0.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_b1ar1")

[node name="body" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="body"]
self_modulate = Color(1.3, 1.3, 1.3, 1)
position = Vector2(-2, -16)
sprite_frames = SubResource("SpriteFrames_a2m0y")
animation = &"idle"

[node name="GunRoot" type="Node2D" parent="body"]

[node name="DashParticles2D" type="GPUParticles2D" parent="body"]
position = Vector2(0, -8)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_hmw5a")
texture = ExtResource("6_gdjfy")
lifetime = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -7)
shape = SubResource("CircleShape2D_5kl1j")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_d7ox4")
lifetime = 0.4
explosiveness = 0.8

[node name="PointLight2D2" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, -6)
enabled = false
energy = 0.5
shadow_enabled = true
texture = ExtResource("6_ky4xl")
offset = Vector2(140, 0)
texture_scale = 0.3

[node name="EquipRoot" type="Node2D" parent="."]

[node name="PickArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickArea"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_e3q2s")
